# devnet-nemo-agent-toolkit

./: 000-first-nat-workflow.md  000-overview.md  001-getting-started.md  100-adding-tools-to-agents.md  100-first-nat-workflow.md  110-adding-retrieval-tool.md  200-adding-tools-to-agents.md  200-multi-agent-orcherstration.md  200-multi-agent-orchestration.md  210-human-in-the-loop.md  300-adding-retrieval-tool.md  300-observability-evaluation-profiling.md  400-multi-agent-orchestration.md  500-human-in-the-loop.md  600-observability-evaluation-profiling.md  700-mcp.md
content/nemo-agent-toolkit/: .coderabbit.yaml  .gitignore  README.md  pyproject.toml
content/nemo-agent-toolkit/ci/: markdown-link-check-config.json
content/nemo-agent-toolkit/ci/release/: update_toml_dep.py
content/nemo-agent-toolkit/ci/scripts/: common.sh  path_checks.py  run_ci_local.sh
content/nemo-agent-toolkit/ci/scripts/github/: tests.sh
content/nemo-agent-toolkit/ci/scripts/gitlab/: build_wheel.sh  tests.sh
content/nemo-agent-toolkit/docker/: Dockerfile
content/nemo-agent-toolkit/docs/source/extend/: function-groups.md  functions.md  memory.md  plugins.md
content/nemo-agent-toolkit/docs/source/quick-start/: index.md
content/nemo-agent-toolkit/docs/source/reference/: cli.md  frameworks-overview.md  optimizer.md
content/nemo-agent-toolkit/docs/source/resources/: running-ci-locally.md  running-tests.md
content/nemo-agent-toolkit/docs/source/tutorials/: add-tools-to-a-workflow.md  create-a-new-workflow.md  customize-a-workflow.md  index.md  test-with-nat-test-llm.md
content/nemo-agent-toolkit/docs/source/workflows/: function-groups.md  profiler.md  sizing-calc.md
content/nemo-agent-toolkit/examples/MCP/simple_auth_mcp/: pyproject.toml
content/nemo-agent-toolkit/examples/UI/: README.md
content/nemo-agent-toolkit/examples/advanced_agents/profiler_agent/: README.md  pyproject.toml
content/nemo-agent-toolkit/examples/agents/data/: rewoo.json
content/nemo-agent-toolkit/examples/agents/rewoo/: README.md
content/nemo-agent-toolkit/examples/agents/tool_calling/: README.md
content/nemo-agent-toolkit/examples/control_flow/router_agent/: README.md  pyproject.toml
content/nemo-agent-toolkit/examples/control_flow/router_agent/configs/: config.yml
content/nemo-agent-toolkit/examples/control_flow/router_agent/src/nat_router_agent/: register.py
content/nemo-agent-toolkit/examples/control_flow/router_agent/tests/: test_control_flow_example_router_agent.py
content/nemo-agent-toolkit/examples/custom_functions/automated_description_generation/: README.md  pyproject.toml
content/nemo-agent-toolkit/examples/deploy/: README.md
content/nemo-agent-toolkit/examples/documentation_guides/tests/: conftest.py  test_custom_workflow.py  test_text_file_ingest.py
content/nemo-agent-toolkit/examples/evaluation_and_profiling/email_phishing_analyzer/: README.md  (+1 more)
content/nemo-agent-toolkit/examples/frameworks/multi_frameworks/: pyproject.toml
content/nemo-agent-toolkit/examples/frameworks/multi_frameworks/src/nat_multi_frameworks/: langchain_research_tool.py
content/nemo-agent-toolkit/examples/frameworks/multi_frameworks/src/nat_multi_frameworks/configs/: config.yml
content/nemo-agent-toolkit/examples/frameworks/multi_frameworks/tests/: test_multi_frameworks_workflow.py
content/nemo-agent-toolkit/examples/notebooks/: 1_getting_started_with_nat.ipynb  3_adding_tools_to_agents.ipynb  4_devnet_multi_agent_orchestration.ipynb
content/nemo-agent-toolkit/examples/notebooks/getting_started/: configs  pyproject.toml
content/nemo-agent-toolkit/examples/notebooks/getting_started/src/getting_started/: getting_started.py  register.py
content/nemo-agent-toolkit/examples/notebooks/getting_started/src/getting_started/configs/: config.yml
content/nemo-agent-toolkit/scripts/: langchain_web_ingest.py
content/nemo-agent-toolkit/tests/: conftest.py
content/nemo-agent-toolkit/tests/_utils/: dask_utils.py
content/nemo-agent-toolkit/tests/test_data/: docker-compose.services.yml  echo.yaml  invalid_yaml.yaml  missing_type_config.yaml
content/work/: simple_web_query
content/work/nemo-agent-toolkit-clone/: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
content/work/nemo-agent-toolkit-clone/.github/: CODEOWNERS  release.yml
content/work/nemo-agent-toolkit-clone/docs/: README.md
content/work/nemo-agent-toolkit-clone/examples/: README.md
content/work/nemo-agent-toolkit-clone/examples/control_flow/sequential_executor/: README.md  pyproject.toml
content/work/nemo-agent-toolkit-clone/examples/control_flow/sequential_executor/configs/: config.yml
content/work/nemo-agent-toolkit-clone/examples/control_flow/sequential_executor/src/nat_sequential_executor/: register.py
content/work/nemo-agent-toolkit-clone/examples/frameworks/adk_demo/: pyproject.toml
content/work/nemo-agent-toolkit-clone/examples/frameworks/adk_demo/src/nat_adk_demo/: agent.py  nat_time_tool.py  register.py  weather_update_tool.py
content/work/nemo-agent-toolkit-clone/examples/frameworks/haystack_deep_research_agent/: pyproject.toml
content/work/nemo-agent-toolkit-clone/examples/frameworks/haystack_deep_research_agent/src/nat_haystack_deep_research_agent/configs/: config.yml
content/work/nemo-agent-toolkit-clone/examples/frameworks/haystack_deep_research_agent/src/nat_haystack_deep_research_agent/data/: sample_document.txt
content/work/nemo-agent-toolkit-clone/examples/frameworks/haystack_deep_research_agent/src/nat_haystack_deep_research_agent/pipelines/: search.py
content/work/nemo-agent-toolkit-clone/examples/notebooks/retail_sales_agent/: data  pyproject.toml
content/work/nemo-agent-toolkit-clone/examples/notebooks/retail_sales_agent/src/retail_sales_agent/: llama_index_rag_tool.py  retail_sales_agent.py  sales_per_day_tool.py
init/: init.sh
meta/: metadata
(+325 files in other folders)
