[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_router_agent"
dynamic = ["version"]
dependencies = [
   "nvidia-nat[langchain]~=1.3"
]
requires-python = ">=3.11,<3.14"
description = "Router Agent for NeMo Agent toolkit"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_router_agent = "nat_router_agent.register"
