## SPDX-FileCopyrightText: Copyright (c) 2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
## SPDX-License-Identifier: Apache-2.0

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."
git_describe_command = "git describe --long --first-parent"

[project]
name = "nat_adk_demo"
dynamic = ["version"]
requires-python = ">=3.11,<3.14"
dependencies = [
  "zstandard",
  "matplotlib~=3.9",
  "nvidia-nat[adk]~=1.3"
]
description = "Google ADK Example"
keywords = ["ai", "agents", "tools", "adk"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_adk_demo = "nat_adk_demo.register"
