[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_haystack_deep_research_agent"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[nvidia_haystack]~=1.3",
  "haystack-ai~=2.18.1",
  "opensearch-haystack~=4.2.0",
  "trafilatura~=2.0.0",
  "pypdf~=5.8.0",
  "docstring-parser~=0.16",
]
requires-python = ">=3.11,<3.14"
description = "Haystack Deep Research Agent workflow for NVIDIA NeMo Agent Toolkit"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_haystack_deep_research_agent = "nat_haystack_deep_research_agent.register"
